# tacit-benchmark

./: .gitignore  ABOUT_THE_AUTHOR.md  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: default.yaml  full_release.yaml  release.yaml
docs/en/: architecture.md  evaluation-guide.md  task-specifications.md
docs/plans/: 2026-02-26-tacit-benchmark-design.md  2026-02-26-tacit-benchmark-implementation.md
docs/zh/: architecture.md  evaluation-guide.md  task-specifications.md
scripts/: publish_hf.py
tacit/: __init__.py  cli.py
tacit/core/: cv_utils.py  distractor.py  renderer.py  types.py  verifier.py
tacit/core/parsers/: base.py  graph_parser.py  knot_parser.py  maze_parser.py  raven_parser.py
tacit/evaluation/: harness.py  metrics.py  report.py  track1.py  track2.py
tacit/generators/: _ca_common.py  _geometry_common.py  base.py  ca_forward.py  ca_inverse.py  graph_coloring.py  graph_isomorphism.py  iso_reconstruction.py  logic_grid.py  maze.py  ortho_projection.py  raven.py  registry.py  unknot.py
tests/: test_cli.py  test_integration.py  test_publish.py  test_publish_real.py  test_registry.py
tests/core/: test_cv_utils.py  test_distractor.py  test_renderer.py  test_types.py  test_verifier.py
tests/evaluation/: test_harness.py  test_metrics.py  test_report.py  test_track1.py  test_track2.py
tests/generators/: test_base.py  test_ca_forward.py  test_ca_inverse.py  test_graph_coloring.py  test_graph_isomorphism.py  test_iso_reconstruction.py  test_logic_grid.py  test_maze.py  test_ortho_projection.py  test_raven.py  test_unknot.py
