[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tacit-benchmark"
version = "0.1.0"
description = "A Programmatic Visual Reasoning Benchmark for Generative and Discriminative Models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Daniel Nobrega Medeiros"}
]
keywords = ["benchmark", "visual-reasoning", "puzzle", "evaluation", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "svgwrite>=1.4",
    "cairosvg>=2.7",
    "Pillow>=10.0",
    "networkx>=3.1",
    "trimesh>=4.0",
    "numpy-stl>=3.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
publish = [
    "huggingface_hub>=0.20",
    "datasets>=2.16",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
topology = [
    "pyknotid>=0.5",
]
graph = [
    "pynauty>=1.1",
]
all = ["tacit-benchmark[publish,dev,topology,graph]"]

[project.scripts]
tacit = "tacit.cli:main"

[tool.setuptools.packages.find]
include = ["tacit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
